tests/ui/generic_enum.rs
#[cxx::bridge]
mod ffi {
    enum A<T> {
        Field,
    }
}

fn main() {}
